--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -7,41 +7,121 @@
 .profile__avatar {
   margin-right: 20px;
   border-radius: 10px;
+  height: 190px;
+  width: 190px;
 }
 
 .profile__column {
   display: flex;
   flex-direction: column;
+  align-items: start;
 }
 
 .profile__name {
   margin: 0 0 12px;
+  max-width: 420px;
   font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-clamp: 3;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__description {
   margin: 0;
+  max-width: 420px;
+  opacity: 70%;
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-clamp: 3;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__edit-btn {
+  display: flex;
+  gap: 8px;
   margin-top: auto;
-  width: 107.34px;
   height: 16px;
   border: none;
   background-color: #fcf5e5;
+  opacity: 70%;
+}
+
+.profile__edit-btn:hover {
+  opacity: 100%;
+  cursor: pointer;
+  transition: opacity 0.3s;
 }
 
 .profile__add-btn {
   color: #fcf5e5;
-  width: 149px;
   height: 52px;
+  width: 160px;
   margin-left: auto;
-  background-color: black;
+  background-color: #212121;
+  border: 2px;
   border-radius: 8px;
-  padding: 18px 32px 18px 32px;
+  padding: 0;
   align-self: flex-end;
   text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1px;
+  white-space: nowrap;
+}
+
+.profile__add-btn:hover {
+  cursor: pointer;
+  opacity: 80%;
+  transition: opacity 0.3s;
+}
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 288px;
+    align-items: center;
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .profile__name {
+    margin-bottom: 6px;
+  }
+
+  .profile__column {
+    align-items: center;
+  }
+
+  .profile__avatar {
+    margin-right: 0;
+    height: 80px;
+    width: 80px;
+    margin-bottom: 12px;
+  }
+
+  .profile__add-btn {
+    align-items: center;
+    margin: 0 auto;
+    padding: 18px 32px 18px 32px;
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .profile__edit-btn {
+    margin-top: 32px;
+  }
+
+  .profile__description {
+    margin-top: 6px;
+  }
 }
