--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -3,3 +3,11 @@
   padding-bottom: 60px;
   margin-top: 60px;
 }
+
+.footer__text {
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 400;
+  color: #212121;
+  opacity: 70%;
+}
