--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,6 +1,7 @@
 .cards {
   padding-top: 20px;
   border-bottom: 1px;
+  color: #212121;
 }
 
 .cards__list {
@@ -16,5 +17,6 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 16px;
   }
 }
