--- a/blocks/card.css
+++ b/blocks/card.css
@@ -55,11 +55,13 @@
 }
 
 @media screen and (max-width: 627px) {
-  /* .card {
-    max-width: 288px;
-  } */
-
   .card__image {
     height: 288px;
+  }
+
+  .card__title {
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 500;
   }
 }
