--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: start;
+  gap: 12px;
 }
 
 .profile__name {
@@ -77,7 +78,10 @@
   border-radius: 8px;
   padding: 0;
   align-self: flex-end;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  gap: 8px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1px;
