--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -2,6 +2,8 @@
   padding-top: 20px;
   border-bottom: 1px;
   color: #212121;
+  border-bottom: 1px rgb(33, 33, 33) solid;
+  padding-bottom: 60px;
 }
 
 .cards__list {
