--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,8 +1,9 @@
 .footer {
   text-align: center;
   padding-bottom: 60px;
-  margin-top: 60px;
-  border: 1px solid rgb(33, 33, 33);
+  padding-top: 60px;
+  margin: 0 auto;
+  max-width: 1280px;
 }
 
 .footer__text {
