--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -15,10 +15,11 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 12px;
+  /* gap: 12px; */
 }
 
 .profile__name {
+  color: rgba(33, 33, 33, 1);
   margin: 0 0 12px;
   max-width: 420px;
   font-weight: 500;
@@ -33,7 +34,7 @@
 }
 
 .profile__description {
-  margin: 0 12px;
+  margin: 0;
   max-width: 420px;
   color: #212121;
   opacity: 70%;
