--- a/blocks/card.css
+++ b/blocks/card.css
@@ -32,12 +32,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-}
-
-.card__description {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+  width: 100%;
 }
 
 .card__like-btn {
