--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,9 +1,8 @@
 .cards {
   padding-top: 20px;
-  border-bottom: 1px;
   color: #212121;
-  border-bottom: 1px rgb(33, 33, 33) solid;
-  padding-bottom: 60px;
+  border-bottom: rgba(33, 33, 33, 0.4) 1px solid;
+  padding-bottom: 20px;
 }
 
 .cards__list {
